# airdrops

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  run-tests.sh
migrations/: deploy.ts
programs/airdrop/: Cargo.toml
programs/airdrop/src/: lib.rs
scripts/: generate-withdraw-seeds.js  print-admin-wallets.js  print-instance-pdas.js
tests/: README.md  airdrop.test.ts  bitmap.test.ts  claim-amount.test.ts  fee-system.test.ts  integration.test.ts  multi-mint.test.ts  multiple-airdrops.test.ts  security.test.ts  simple.test.ts  test-setup.ts  test-utils.ts  voucher-0xFFFF.test.ts  voucher.test.ts  withdraw.test.ts
